# katalogas

./: .dockerignore  .env  .gitignore  Makefile  README.rst  docker-compose-test.yml  docker-compose.yml  log.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run_tests.yml
docker/: Dockerfile
notes/: django.sh  docker.sh  elasticsearch.sh  github.sh  postgres.sh  weback.sh
notes/docker/: build.sh  run.sh
notes/scripts/: holidays.sh  manifest.sh  migrate.sh
notes/vitrina/: api.sh  categories.sh  datasets.sh  reversion.sh  structure.sh  tasks.sh  viisp.sh
resources/: VIISP_test.crt  adp-dev-fresh.sql  adp-dev.sql  adp-pg.sql  prod-auth.pem  request.xml
scripts/: Github_project_to_CSV.py  VIISP_xml.py  add_holiday_dates.py  anonymize.py  check_for_distribution_and_frequency_errors.py  create_dataset_stats.py  create_history_objects.py  create_redirect_objects.py  create_representative_request_template.py  downloadstats.py  export_dataset_structure.py  fix_files.py  fix_tag_duplicates.py  github-export.py  import_organizations.py  manifest_export.py  manifest_import.py  migrate_files.py  migrate_news.py  migrate_pages.py  representative-request-template.doc  send_request_emails.py  translate_datasets.py  upload_data_to_storage.py
static/css/: adp-final.css  adp-final.css.map
tests/: conftest.py  test_dataset_detail.py  test_dataset_filters.py  test_dataset_search.py  test_datasets.py  test_helpers.py  test_organization_detail.py  test_organization_filters.py  test_organization_search.py  test_organizations.py  test_request_detail.py  test_task_list.py  test_view_count.py  test_vitrina.py
tests/api/: test_views.py
tests/classifiers/: test_admin.py  test_migrations.py
tests/comments/: test_services.py  test_views.py
tests/compat/: test_redirections.py
tests/datasets/: test_forms.py  test_members_view.py  test_structure.py  test_views.py
tests/likes/: test_views.py
tests/messages/: test_views.py
tests/orgs/: test_services.py  test_views.py
tests/projects/: test_views.py
tests/requests/: test_views.py
tests/resources/: test_views.py
tests/scripts/: test_downloadstats.py  test_manifest_export.py  test_upload_data_to_storage.py
tests/structure/: test_services.py  test_views.py
tests/tasks/: test_services.py  test_views.py
tests/users/: test_migrations.py  test_password_validation.py  test_views.py
tests/viisp/: test_views.py  test_xml.py
vitrina/: apps.py  asgi.py  context_processors.py  fields.py  filters.py  helpers.py  middleware.py  models.py  services.py  settings.py  test_settings.py  urls.py  validators.py  views.py  wsgi.py
vitrina/api/: admin.py  apps.py  exceptions.py  factories.py  (+7 more)
webpack/: package-lock.json  package.json  webpack.config.js
(+739 files in other folders)
