[tool.poetry]
name = "vitrina"
version = "0.1.0"
description = ""
authors = ["IVPK <atviriduomenys@ivpk.lt>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.14"
django-cms = "^3.10.1"
django-sekizai = "^3.0.1"
django-filer = "^2.2.1"
djangocms-text-ckeditor = "^5.0.1"
djangocms-blog = "^1.2.3"
django-environ = "^0.9.0"
django-hitcount = "^1.3.5"
psycopg2-binary = "^2.9.3"
django-crispy-forms = "^1.14.0"
python-slugify = "^6.1.2"
bcrypt = "^4.0.0"
itsdangerous = "^2.1.2"
django-haystack = {extras = ["elasticsearch"], version = "^3.2.1"}
django-tagulous = "^1.3.3"
elasticsearch = "7.8.1"
django-reversion = "^5.0.3"
crispy-bulma = "^0.8.0" 
django-allauth = "^0.51.0"
requests = ">=2.0.0,<3.0.0"
cryptography = "^38.0.4"
freezegun = "^1.2.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"
requests-cache = "^1.0.0"
xdg-base-dirs = "^6.0.0"
c3pyo = "^0.0.4.1"
django-chartjs = "^2.3.0"
pandas = "^2.0.0"
django-sass-processor = "^1.2"
signxml = "3.0.0" #Viisp uses old encryption algorithms, which are deprecated in later versions.
bs4 = "^0.0.1"
stringcase = "^1.2.0"
docx = "^0.2.4"
python-docx = "^0.8.11"
asciidoc = "^10.2.0"
django-braces = "^1.15.0"
lark-parser = "^0.12.0"
markdown = "^3.4.3"
pygments = "^2.15.1"
django-select2 = "^8.1.2"
openpyxl = "^3.1.2"
user-agents = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
WebTest = "^3.0.0"
django-webtest = "^1.9.10"
factory-boy = "^3.2.1"
pprintpp = "^0.4.0"
django-compressor = "^4.0"
django-libsass = "^0.9"
libsass = "^0.21.0"
tqdm = "^4.64.1"
dataset = "^1.5.2"
typer = "^0.6.1"
flake8 = "^4.0.1"
xlsxwriter = "^3.0.3"
django-browser-reload = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
